tests/script_errors/unfinished_escape_eof/error.txt
Error: 
      | ^ An unexpected end of stream was found